# cmake_cross_build

./: CMakeLists.txt  README.md  abc.cmake  main.cpp
linaro-multilib-2014.06-gcc4.9/arm-linux-gnueabihf/libc/lib/arm-linux-gnueabihf/: libasan.so.1.0.0  libatomic.so.1.1.0  libgcc_s.so.1  libgomp.so.1.0.0  libitm.so.1.0.0  libssp.so.0.0.0  libubsan.so.0.0.0
linaro-multilib-2014.06-gcc4.9/arm-linux-gnueabihf/libc/lib/armv6k-linux-gnueabi/: libasan.so.1.0.0  libatomic.so.1.1.0  libgcc_s.so.1  libgomp.so.1.0.0  libitm.so.1.0.0  libssp.so.0.0.0  libubsan.so.0.0.0
linaro-multilib-2014.06-gcc4.9/arm-linux-gnueabihf/libc/lib/armv7a-linux-gnueabi/: libasan.so.1.0.0  libatomic.so.1.1.0  libgcc_s.so.1  libgomp.so.1.0.0  libitm.so.1.0.0  libssp.so.0.0.0  libubsan.so.0.0.0
linaro-multilib-2014.06-gcc4.9/arm-linux-gnueabihf/libc/lib/armv7a-linux-gnueabihf/: libasan.so.1.0.0  libatomic.so.1.1.0  libgcc_s.so.1  libgomp.so.1.0.0  libitm.so.1.0.0  libssp.so.0.0.0  libubsan.so.0.0.0
linaro-multilib-2014.06-gcc4.9/arm-linux-gnueabihf/libc/lib/ldscripts/: armelf_linux_eabi.x  armelf_linux_eabi.xbn  armelf_linux_eabi.xc  armelf_linux_eabi.xd  armelf_linux_eabi.xdc  armelf_linux_eabi.xdw  armelf_linux_eabi.xn  armelf_linux_eabi.xs  armelf_linux_eabi.xsc  armelf_linux_eabi.xsw  armelf_linux_eabi.xw  armelfb_linux_eabi.x  armelfb_linux_eabi.xbn  armelfb_linux_eabi.xc  armelfb_linux_eabi.xd  armelfb_linux_eabi.xdc  armelfb_linux_eabi.xdw  (+5 more)
linaro-multilib-2014.06-gcc4.9/share/gdb/: gdbinit
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
(+11 files in other folders)
